--- a/style.css
+++ b/style.css
@@ -66,3 +66,15 @@ a:hover {
     right: 18px;
     top: 12px;
 }
+
+#logo-container {
+    margin: auto;
+    width: 50%;
+    padding-top: 100px;
+}
+
+#google-logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
