--- a/style.css
+++ b/style.css
@@ -1,109 +1,54 @@
-body {
-    font-family: arial, sans-serif;
-    font-size: 13px;
-    color: #000000;
-    text-decoration: none;
-}
-
-header {
-    height: auto;
-    width: 100%;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-li {
-    display: inline;
-    padding: 6px;
-}
-
-a {
-    text-decoration: none;
-    color: #000000;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
 input {
-    width: 540px;
-    height: 40px;
-    margin-left: 90px;
-    border: 1px solid #dfe1e5;
-    border-radius: 25px;
-    font-size: 16px;
-    background-image: url('searchicon.png');
-    background-size: 15px 15px;
-    background-repeat: no-repeat;
-    background-position: 12px;
+    border: hidden;
 }
 
-input:hover {
-    box-shadow: 0 1px 6px rgba(32,33,36,0.28);
-}
-
-input:focus {
-    outline: none;
-    padding-left: 45px;
-}
-
-#apps {
-    height: 25px;
-    width: 25px;
-    display: inline-block;
-    margin-top: 5px;
-}
-
-#account {
-    height: 30px;
-    width: 30px;
+.container {
     display: inline-block;
 }
 
-#upper-left-links {
-    height: auto;
-    width: auto;
-    position: absolute;
-    left: 16px;
-    top: 20px;
-}
-
-#upper-right-links {
-    height: auto;
-    width: auto;
-    position: absolute;
-    right: 102px;
-    top: 22px;
-}
-
-#upper-right-icons {
-    height: auto;
-    width: auto;
-    position: absolute;
-    right: 18px;
-    top: 12px;
-}
-
-#logo-container {
-    margin: auto;
-    width: 50%;
-    padding-top: 145px;
+.search-btn {
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    color: #5F6368; 
+    font-family: Arial, sans-serif; 
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px; 
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
 }
 
 #google-logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-top: 109px;
 }
 
 #searchbar-container {
-    margin: auto;
-    width: 50%;
-    padding-top: 30px;
+    max-width: 600px;
+    width: 75%;
+    background: #fff;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 220px;
+    border: 1px solid #dfe1e5;
+    height: 44px;
+    border-radius: 24px;
 }
 
+#searchbar-container:hover {
+    box-shadow: 0 1px 6px rgba(32,33,36,.28);
+    border-color: rgba(223,225,229,0);
+}
+
+#search-buttons {
+    position: absolute;
+    left: 50%; 
+    transform: translateX(-50%); 
+    margin-top: 290px;
+}
