--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
-input {
-    border: hidden;
+* {
+    font-family: arial, sans-serif;
+    font-size: small;
+}
+
+a {
+    color: #1a0dab;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #609;
 }
 
 .container {
@@ -21,6 +31,14 @@ input {
     text-align: center;
 }
 
+.search-btn:hover {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+    background-color: #f8f8f8;
+    border: 1px solid #c6c6c6;
+    color: #222;
+}
+
 #google-logo {
     position: absolute;
     left: 50%;
@@ -29,10 +47,11 @@ input {
 }
 
 #searchbar-container {
-    max-width: 600px;
-    width: 75%;
-    background: #fff;
     position: absolute;
+    display: flex;
+    max-width: 600px;
+    width: 30%;
+    background: #fff;
     left: 50%;
     transform: translateX(-50%);
     margin-top: 220px;
@@ -46,9 +65,47 @@ input {
     border-color: rgba(223,225,229,0);
 }
 
+#searchbar {
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    padding-top: 5px;
+    color: rgba(0,0,0,.87);
+    outline: none;
+    font: 16px arial, sans-serif;
+    line-height: 34px;
+    height: 34px;
+    width: 90%;
+}
+
 #search-buttons {
     position: absolute;
     left: 50%; 
     transform: translateX(-50%); 
     margin-top: 290px;
 }
+
+#mag-icon {
+    background-color: transparent;
+    height: 22px;
+    width: 22px;
+    padding: 9px 10px;
+    object-position: left;
+}
+
+#voice-icon { 
+    height: 20px;
+    padding: 12px 16px;
+    object-position: right;
+}
+
+#blurb {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 355px;
+    gap: 10px;
+}
+
