--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ a:visited {
     color: #609;
 }
 
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .container {
     display: inline-block;
 }
@@ -50,7 +56,7 @@ a:visited {
     position: absolute;
     display: flex;
     max-width: 600px;
-    width: 30%;
+    width: 55%;
     background: #fff;
     left: 50%;
     transform: translateX(-50%);
@@ -108,4 +114,41 @@ a:visited {
     margin-top: 355px;
     gap: 10px;
 }
+
+#top-left-links {
+    display: flex;
+    gap: 15px;
+    margin-top: 15px;
+    margin-left: 16px
+}
+
+#top-right-links {
+    display: flex;
+    gap: 15px;
+    margin-top: 15px;
+    margin-left: auto;
+}
+
+#top-right-icons{
+    display: flex;
+    gap: 15px;
+    margin-left: 12px;
+    margin-right: 16px;
+    margin-top: 15px;
+}
+
+#apps-icon {
+    height: 25px;
+    width: 25px;
+    margin: auto;
+}
+
+#sign-in {
+    width: 100px;
+    color: white; 
+    background-color: blue;
+    border: none;
+    border-radius: 5px;
+}
+
 
