--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 * {
     font-family: arial, sans-serif;
     font-size: small;
+    color: #000000;
+}
+
+body {
+    margin: 0;
 }
 
 a {
-    color: #1a0dab;
     text-decoration: none;
 }
 
 a:visited {
-    color: #609;
+    text-decoration: none;
+    color:#000000;
 }
 
 nav {
@@ -19,13 +24,14 @@ nav {
 }
 
 footer {
+    display: flex;
     position: fixed;
     bottom: 0;
-    margin: auto;
     background: #f2f2f2;
     border-top: 1px solid #e4e4e4;
     line-height: 40px;
     width: 100%;
+    justify-content: space-between;
 }
 
 .container {
@@ -174,6 +180,12 @@ footer {
     display: flex;
     gap: 15px;
     margin-left: 16px; 
+}
+
+#bottom-links-right {
+    display: flex;
+    gap: 15px;
+    margin-right: 16px; 
 }
 
 
